@@ -4,6 +4,7 @@ New features:
 ...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)
 
 Bug fixes:
+A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
 A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
 A......... [ZBX-12727] fixed response for script.get() method with "editable" flag (Sasha)
 A......... [ZBX-12727] fixed dcheck.get(), dhost.get() and dservice.get() permission checks for admin users; related to ZBX-7238 (Sasha)
@@ -509,6 +510,7 @@ New features:
 ...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)
 
 Bug fixes:
+A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
 A......... [ZBX-12727] fixed response for script.get() method with "editable" flag (Sasha)
 A......... [ZBX-12727] fixed dcheck.get(), dhost.get() and dservice.get() permission checks for admin users; related to ZBX-7238 (Sasha)
 
